--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "lint": "prettier --check 'src/**/*.{ts,js}'",
     "lint:fix": "prettier --write 'src/**/*.{ts,js}'"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "^8.11.2",
@@ -27,10 +30,12 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "commander": "^12.0.0",
     "drizzle-orm": "^0.29.4",
     "idn-area-data": "^3.1.0",
     "pg": "^8.11.3",
     "shapefile": "^0.6.6",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.3"
   }
 }
