sync district and village boundaries

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/cli-progress": "^3.11.5",
     "@types/pg": "^8.11.2",
     "@types/shapefile": "^0.6.4",
     "drizzle-kit": "^0.20.14",
@@ -30,6 +31,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "commander": "^12.0.0",
     "drizzle-orm": "^0.29.4",
     "idn-area-data": "^3.1.0",
