--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cli-progress": "^3.11.5",
     "@types/pg": "^8.11.2",
     "@types/shapefile": "^0.6.4",
+    "@types/wellknown": "^0.5.8",
     "drizzle-kit": "^0.20.14",
     "prettier": "^3.2.5"
   },
@@ -38,6 +39,7 @@
     "p-queue": "^8.0.1",
     "pg": "^8.11.3",
     "shapefile": "^0.6.6",
+    "wellknown": "^0.5.0",
     "zod": "^3.22.4",
     "zod-validation-error": "^3.0.3"
   }
